# robot-bento

./: .env  .gitignore  Cargo.toml  app_database.db-shm  build.rs  note.md
.cargo/: config.toml
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/: config.ts
frontend/src/lib/components/project/: ProjectCard.svelte  ProjectList.svelte  TestRunProgress.svelte
frontend/src/lib/components/robot/: Breadcrumbs.svelte  ErrorsDetails.svelte  NavigationFooter.svelte  StatusBadge.svelte  SuiteDetails.svelte  TestDetails.svelte  TestRunPage.svelte  TestTree.svelte
frontend/src/lib/services/: date.ts  projects.ts  robot.ts
frontend/src/lib/types/: generated.ts  project.ts  robot.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/[slug]/: +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/types/: generated.ts
migrations/: 20250131173000_init.sql
report-fetcher/: Cargo.toml
report-fetcher/src/: main.rs
src/: main.rs
src/config/: database.rs  server.rs
src/handlers/: parser.rs
src/handlers/resources/: output_simplified.xml
src/models/: mod.rs  projects.rs  projects_legacy.rs  robot.rs  robot_data.rs  robot_legacy.rs
src/models/projects/: api.rs  db.rs  domain.rs
src/models/robot/: api.rs  db.rs  domain.rs
src/repositories/: mod.rs  projects.rs  robot.rs
src/repositories/queries/robot/: get_all_test_runs.sql  get_all_test_runs_by_project_id.sql  get_latest_test_runs_summaries_for_projects.sql  get_test_run_by_id.sql  get_test_run_statistics_by_test_run_id.sql  get_test_runs_data_by_project_ids.sql  get_test_runs_summaries_by_project_id.sql  get_test_summaries.sql  insert_suite_keyword.sql  insert_test_run.sql
src/repositories/sql/robot/: get_all_test_runs.sql  get_all_test_runs_by_project_id.sql  get_root_suites_by_test_run_id.sql  get_suites_by_test_run_id.sql  get_test_run_by_id.sql  get_test_run_data_by_project_ids.sql  get_test_run_errors_by_test_run_id.sql  get_test_run_statistics_by_test_run_id.sql  get_tests_by_suite_id.sql  insert_test_keywords.sql  insert_test_run.sql
src/routes/: frontend.rs  ingest.rs  mod.rs  projects.rs  robot.rs  shutdown.rs
src/services/: mod.rs  parser.rs  projects.rs  robot.rs
src/services/mappers/: robot.rs
src/services/resources/: output_simplified.xml
src/utils/: date.rs
xtask/src/: main.rs
(+30 files in other folders)
