[package]
name = "robot-bento"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "xtask", "report-fetcher"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
itertools = "0.14.0"
mime_guess = "2.0.5"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.137"
sha1 = "0.10.6"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typeshare = "1.0.4"
